# ScrEn

./: .gitignore  CMakeLists.txt  README.md  bridge.h  main.cpp  program.cpp  windowSettings.cpp  windowSettings.h
